scaffold/typescript-go-main/testdata/baselines/reference/submodule/conformance/jsdocTemplateTag.errors.txt
forgot.js(13,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?
forgot.js(13,22): error TS1005: '}' expected.
forgot.js(23,1): error TS2322: Type '(keyframes: Object[]) => void' is not assignable to type '(keyframes: Keyframe[] | PropertyIndexedKeyframes, options?: number | KeyframeAnimationOptions) => Animation'.
  Types of parameters 'keyframes' and 'keyframes' are incompatible.
    Type 'Keyframe[] | PropertyIndexedKeyframes' is not assignable to type 'Object[]'.
      Type 'PropertyIndexedKeyframes' is missing the following properties from type 'Object[]': length, pop, push, concat, and 35 more.


==== forgot.js (3 errors) ====
    /**
     * @param {T} a
     * @template T
     */
    function f(a) {
        return () => a
    }
    let n = f(1)()
    
    /**
     * @param {T} a
     * @template T
     * @returns {function(): T}
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
                         ~
!!! error TS1005: '}' expected.
     */
    function g(a) {
        return () => a
    }
    let s = g('hi')()
    
    /**
     * @param {Array.<Object>} keyframes - Can't look up types on Element since it's a global in another file. (But it shouldn't crash).
     */
    Element.prototype.animate = function(keyframes) {};
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '(keyframes: Object[]) => void' is not assignable to type '(keyframes: Keyframe[] | PropertyIndexedKeyframes, options?: number | KeyframeAnimationOptions) => Animation'.
!!! error TS2322:   Types of parameters 'keyframes' and 'keyframes' are incompatible.
!!! error TS2322:     Type 'Keyframe[] | PropertyIndexedKeyframes' is not assignable to type 'Object[]'.
!!! error TS2322:       Type 'PropertyIndexedKeyframes' is missing the following properties from type 'Object[]': length, pop, push, concat, and 35 more.
    